--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,11 @@
         <h1>Contact Us</h1>
         <p>If you have any questions, feel free to reach out to us using the form below.</p>
 
-        <form action="#" method="post" class="contact-form">
+        <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+
+            <input type="hidden" name="access_key" value="a26873cb-8425-41ee-b687-fe6000b3c0ba">
+
+
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
