--- a/payment.html
+++ b/payment.html
@@ -5,31 +5,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f0f2f5;
+        }
+
+        .payment-container {
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 2rem;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .payment-container h1 {
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .payment-container p {
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        .payment-container label {
+            font-size: 14px;
+            color: #333;
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .payment-container input[type="email"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .payment-container input[type="email"]:focus {
+            outline: none;
+            border-color: #007bff;
+        }
+
+        .pay-now {
+            background-color: #28a745;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            transition: background-color 0.3s ease;
+        }
+
+        .pay-now:hover {
+            background-color: #218838;
+        }
+    </style>
+
+
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({
+                publicKey: "Umy1TmfJx999DMLwQ",
+            });
+        })();
+    </script>
+
+
 </head>
 
 <body>
     <div class="payment-container">
         <h1>Complete Your Payment</h1>
         <p>Complete payment to confirm your booking.</p>
+
+        <label for="email">Enter your email correctly, as you will receive the link there:</label>
+        <input type="email" id="email" name="email" required placeholder="Enter your email">
+
         <button onclick="completePayment()" class="pay-now">Pay Now</button>
     </div>
 
+
+    <!-- Payment Script -->
     <script>
         function completePayment() {
-            // alert("Processing payment...");
-    
-            const params = new URLSearchParams(window.location.search);
-            const course = params.get("course");
-            const date = params.get("date");
-            const time = params.get("time");
+    const email = document.getElementById("email").value;
+    if (!email) {
+        alert("Please enter your email to receive the confirmation link.");
+        return;
+    }
 
-            console.log(course, date, time);
+    // Extract course, date, and time from URL parameters (or set defaults for testing)
+    const params = new URLSearchParams(window.location.search);
+    const course = params.get("course");
+    const date = params.get("date") ;
+    const time = params.get("time");
 
-            console.log("done bro!!");
+    // Prepare email template parameters
+    const templateParams = {
+        to_email: email,
+        course: course,
+        date: date,
+        time: time
+    };
 
-            window.location.href = `https://chetan1930.github.io/My-Payment-Page/?course=${course}&date=${date}&time=${time}&status=confirmed`;
-        }
+    console.log("Attempting to send email with parameters:", templateParams);
+
+    // Use EmailJS to send the email
+    emailjs.send("service_azpsyim", "template_6w402yf", templateParams)
+        .then(function(response) {
+            console.log("SUCCESS!", response.status, response.text);
+            alert("Payment confirmation email has been sent!");
+
+            // Redirect after successful email sending
+            window.location.href = `https://chetan1930.github.io/My-Payment-Page/?course=${course}&date=${date}&time=${time}&email=${encodeURIComponent(email)}&status=confirmed`;
+        }, function(error) {
+            console.error("FAILED...", error);
+            alert("There was an issue sending the confirmation email. Please try again.");
+        });
+}
+
     </script>
 </body>
 
