All set now Bro!!

--- a/booking-confirmation.html
+++ b/booking-confirmation.html
@@ -52,7 +52,7 @@
     <div class="confirmation-container">
         <div class="checkmark">✓</div>
         <h1>Booking Confirmed!</h1>
-        <p>Your booking has been successfully completed Muskan. A confirmation email has been sent to your inbox.</p>
+        <p>Your booking has been successfully completed. A confirmation email has been sent to your inbox.</p>
     </div>
 
 </body>
